Provide modrinth download metadata, update some other stuff